package ar.edu.utn.frba.dds.coleccion.filtro;

import ar.edu.utn.frba.dds.hecho.Hecho;

public interface FiltroDeHecho {
  boolean filtrar(Hecho hecho);
}
