package ar.edu.utn.frba.dds.hecho;

public class ContenidoMultimedia {
}
