@startuml
'https://plantuml.com/class-diagram
!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml

package Agregador <<Folder>> {
    class Administrador {
        - nombre: String
    }
    class Contribuyente {
      - nombre: String
      - apellido: String
      - edad: LocalDate
    }
    interface FiltroDeHecho {
      + filtrar(hecho: Hecho): boolean
    }

    class TituloFiltroDeHecho implements FiltroDeHecho {
      - titulo: String
    }

    class CategoriaFiltroDeHecho implements FiltroDeHecho {
      - categoria: Categoria
    }

    class FechaDelHechoFiltroDeHecho implements FiltroDeHecho {
      - fechaDelHechoDesde: LocalDateTime
      - fechaDelHechoHasta: LocalDateTime
    }

    class TipoContenidoMulitmediaFiltroDeHecho implements FiltroDeHecho {
      - tipoContenidoMultimedia: TipoContenidoMultimedia
    }

    class UbicacionFiltroDeHecho implements FiltroDeHecho {
      - ubicacion: Ubicacion
    }

    class Coleccion {
      - handle: String
      - titulo: String
      - descripcion: String
      - tipoConsenso: TipoConsenso
      - fuentes: Map<Fuente, Collection<Hecho>>
      - criteriosDePertenencia: FiltrosParaHecho

      + agregarFiltro(filtro: FiltroDeHecho): void
      + colectarHechos(): void
      + hechos(): Collection<Hecho>
    }

    class FiltrosParaHecho {
      - filtros: List<FiltroDeHecho>

      + aplicarFiltros(hecho: Hecho): boolean
      + agregarFiltro(filtro: FiltroDeHecho): void
    }

    class Fuente {
      - baseUrl: String
      - tipoFuente: TipoFuente

      + hechos(): Collection<Hecho>
      + eliminar(hecho: Hecho): void
    }

    enum TipoFuente {
        DINAMICA, PROXY, METAMAPA, ESTATICA
    }

    class Hecho {
      - titulo: String
      - descripcion: String
      - categoria: Categoria
      - contenidoMultimedia: ContenidoMultimedia
      - ubicacion: Ubicacion
      - fechaDelHecho: LocalDateTime
      - fechaDeCarga: LocalDateTime
      - hechoOrigen: HechoOrigen
      - etiquetas: Collection<Etiqueta>
      - fuente: Fuente
      - eliminado: boolean
      - consensuado: boolean

      + estaEliminado(): boolean
      + eliminar(): void
      + etiquetar(etiqueta: Etiqueta): void
      + getTipoContenidoMultimedia(): TipoContenidoMultimedia
      + setFuente(fuente: Fuente): Hecho
      + isConsensuado(): boolean
      + setConsensuado(consensuado: boolean): void
    }

    class Categoria {
      - nombre: String
    }

    class Etiqueta {
      - nombre: String
    }

    enum HechoOrigen {
        CONTRIBUYENTE
        MANUAL
        EXTERNO
    }

    class SolicitudDeEliminacionDeHecho {
      - solicitudDeEliminacionDeHechoEstado: SolicitudDeEliminacionDeHechoEstado
      - fechaCreacion: LocalDateTime
      - hecho: Hecho
      - motivo: String
      - reportador: Contribuyente
      - aprobador: Administrador
      - fechaResolucion: LocalDateTime

      + aprobar(aprobador: Administrador): void
      + rechazar(aprobador: Administrador): void
      + rechazar(): void
    }

    enum SolicitudDeEliminacionDeHechoEstado {
      ACEPTADA, RECHAZADA, PENDIENTE
    }

    class Ubicacion {
      - latitud: String
      - longitud: String

      + crearUbicacion(latitud: String, longitud: String): Ubicacion
    }

    class ContenidoMultimedia {
      - tipoContenidoMultimedia: TipoContenidoMultimedia
      - uri: String

    }

    enum TipoContenidoMultimedia {
        FOTO,
        VIDEO,
        AUDIO,
    }

    class Absoluto implements Consenso {
    }

    interface Consenso {
      + analizarHechoEnFuente(hechos: Collection<Hecho>, hecho: Hecho): List<Boolean>
      + hayConsenso(resultList: List<List<Boolean>>): boolean
    }

    class Consensos {
      - consensos: Map<TipoConsenso, Consenso>
    }

    enum TipoConsenso {
      ABSOLUTO,
      MAYORIA_SIMPLE,
      MULTIPLES_MENCIONES,
    }

    class MayoriaSimple implements Consenso {

    }

    class MultiplesMenciones implements Consenso {

    }

    Coleccion --> Fuente
    Fuente --> TipoFuente
    Fuente --> Hecho

    ContenidoMultimedia --> TipoContenidoMultimedia

    FiltrosParaHecho o-- FiltroDeHecho
    Coleccion --> FiltrosParaHecho
    Coleccion o-- Hecho
    Coleccion --> TipoConsenso

    Hecho --> ContenidoMultimedia
    Hecho --> HechoOrigen
    Hecho --> Categoria
    Hecho --> Ubicacion
    Hecho *-- Etiqueta
    Hecho --> Fuente

    SolicitudDeEliminacionDeHecho --> SolicitudDeEliminacionDeHechoEstado
    SolicitudDeEliminacionDeHecho --> Contribuyente
    SolicitudDeEliminacionDeHecho --> Administrador

    TipoContenidoMultimediaFiltroDeHecho ..|> FiltroDeHecho
    CategoriaFiltroDeHecho --> Categoria
    TipoContenidoMultimediaFiltroDeHecho --> TipoContenidoMultimedia
    UbicacionFiltroDeHecho --> Ubicacion

    Consensos --> Consenso
    Consensos --> TipoConsenso
}

package Fuente_Dinamica <<Folder>> {

    class Administrador {
      - nombre: String
    }
    note left: Se usará cunado se registren\nSolicitudes de Modificación.

    class Contribuyente {
      - nombre: String
      - apellido: String
      - fechaNacimiento: LocalDate
    }

    class ContenidoMulitmedia {
      - tipoContenidoMultimedia: TipoContenidoMultimedia
      - uri: String
    }

    enum TipoContenidoMulitmedia {
        FOTO,
        VIDEO,
        AUDIO,
    }

    class Hecho {
      - contribuyente: Contribuyente
      - titulo: String
      - descripcion: String
      - categoria: Categoria
      - contenidoMultimedia: ContenidoMultimedia
      - ubicacion: Ubicacion
      - fechaDelHecho: LocalDateTime
      - fechaDeCarga: LocalDateTime
      - hechoOrigen: HechoOrigen
      - hechoEstado: HechoEstado
      - etiquetas: Collection<Etiqueta>
      - eliminado: boolean

      + estaEliminado(): boolean
      + eliminar(): void
      + etiquetar(etiqueta: Etiqueta): void
    }

    enum HechoEstado {
      PENDIENTE,
      ACEPTADO,
      ACEPTADO_CON_SUGUERENCIAS,
      RECHAZADO,
    }

    class Categoria {
      - nombre: String
    }

    class Etiqueta {
      - nombre: String
    }

    enum HechoOrigen {
        CONTRIBUYENTE,
        MANUAL,
        EXTERNO,
    }

    class Ubicacion {
      - latitud: String
      - longitud: String

      + crearUbicacion(latitud: String, longitud: String): Ubicacion
    }

    ContenidoMulitmedia --> TipoContenidoMulitmedia

    Hecho --> ContenidoMulitmedia
    Hecho --> Contribuyente
    Hecho --> HechoOrigen
    Hecho --> Categoria
    Hecho --> Ubicacion
    Hecho *-- Etiqueta
    Hecho --> HechoEstado
}

package Fuente_Estatica <<Folder>> {
    interface LectorDeArchivo {
      + getRegistros(uri: URI): List<List<String>>
    }

    class LectorArchivoCSV implements LectorDeArchivo {

    }

    interface LocalizadorDeArchivo {
      + getURI(): URI
    }

    class LocalizadorDeArchivoDelClassPathLocal implements LocalizadorDeArchivo {
      - nombreArchivo: String
      - tipoArchivo: TipoArchivo
    }

    enum TipoArchivo {
      CSV, JSON, TXT
      - extension: String

      + getExtension(): String
    }

    class FuenteEstatica {
      - lectorDeArchivoDeHechos: LectorDeArchivo
      - localizadorDeArchivo: LocalizadorDeArchivo
      
      + traerHechos(): Collection<Hecho>
    }


    class Hecho {
      - titulo: String
      - descripcion: String
      - categoria: Categoria
      - contenidoMultimedia: ContenidoMultimedia
      - ubicacion: Ubicacion
      - fechaDelHecho: LocalDateTime
      - fechaDeCarga: LocalDateTime
      - hechoOrigen: HechoOrigen
      - etiquetas: Collection<Etiqueta>
      - eliminado: boolean

      + estaEliminado(): boolean
      + eliminar(): void
      + etiquetar(etiqueta: Etiqueta): void
    }

    class Categoria {
      - nombre: String
    }

    class Etiqueta {
      - nombre: String
    }

    enum HechoOrigen {
        CONTRIBUYENTE,
        MANUAL,
        EXTERNO,
    }

    class Ubicacion {
      - latitud: String
      - longitud: String

      + crearUbicacion(latitud: String, longitud: String): Ubicacion
    }

    FuenteEstatica .. Hecho

    LocalizadorDeArchivoDelClassPathLocal --> TipoArchivo
    FuenteEstatica --> LectorDeArchivo
    FuenteEstatica --> LocalizadorDeArchivo

    ContenidoMulitmedia --> TipoContenidoMulitmedia

    Hecho --> ContenidoMulitmedia
    Hecho --> Contribuyente
    Hecho --> HechoOrigen
    Hecho --> Categoria
    Hecho --> Ubicacion
    Hecho *-- Etiqueta

}

package Fuente_Proxy <<Folder>> {
    class FuenteProxy {
      + hechos(): Collection<HechoDTO>
      + eliminar(hecho: HechoDTO): void
    }


}
@enduml